--- a/package.json
+++ b/package.json
@@ -1,18 +1,22 @@
 {
   "dependencies": {
     "express": "^4.21.0",
-    "mongoose": "^8.6.2"
+    "mongoose": "^8.6.2",
+    "zod": "^3.23.8"
   },
   "scripts": {
     "build": "tsc",
-    "dev": "ts-node-dev src/app.ts",
+    "dev": "ts-node-dev --respawn --transpile-only src/server.ts",
     "start": "node dist/app.js"
   },
   "devDependencies": {
+    "@rocketseat/eslint-config": "^2.2.2",
     "@types/express": "^4.17.21",
     "@types/mongoose": "^5.11.97",
     "@types/node": "^22.5.4",
+    "eslint": "^8.57.0",
     "ts-node": "^10.9.2",
+    "ts-node-dev": "^2.0.0",
     "typescript": "^5.6.2"
   }
 }
