--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@types/mongoose": "^5.11.97",
     "@types/node": "^22.5.4",
     "eslint": "^8.57.0",
+    "mongodb-memory-server": "^10.0.0",
     "ts-node": "^10.9.2",
     "ts-node-dev": "^2.0.0",
     "typescript": "^5.6.2",
