--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,7 +9,7 @@
       "outDir": "./dist",
       "baseUrl": "./",
       },
-    "include": ["src/**/*"],
+    "include": ["src/**/*", "test/**/*"],
     "exclude": ["node_modules"]
   }
   
